<resources>
    <string name="app_name">TestDrivenDevelopment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add category</string>
    <string name="category">Category</string>
    <string name="category_name">Category name</string>


    <!-- AddCategoryFragment -->
    <string name="category_blank">Category cannot be blank</string>
    <string name="category_duplicate">Category cannot be duplicate</string>
    <string name="category_add_failed">Could not add category</string>
    <string name="exercise_name">Exercise name</string>
    <string name="primary_muscle">Primary muscle</string>
    <string name="secondary_muscle">Secondary muscle</string>
    <string name="add_exercise">Add exercise</string>

    <string name="exercise_blank">Exercise cannot be blank</string>
    <string name="exercise_duplicate">Exercise cannot be duplicate</string>
    <string name="exercise_add_failed">Could not add exercise</string>

    <string name="set_weight_blank">Weight cannot be blank</string>
    <string name="set_weight_pos">Weight must be positive</string>
    <string name="set_reps_blank">Reps cannot be blank</string>
    <string name="set_reps_pos">Reps must be a positive integer</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>