<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addExerciseFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_exercise.AddExerciseFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="309dp" />

    <TextView
        android:id="@+id/tvExercise_exerciseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/exercise_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tvCategory_exerciseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvExercise_exerciseFragment"
        app:layout_constraintTop_toBottomOf="@+id/tvExercise_exerciseFragment" />

    <TextView
        android:id="@+id/tvPrimaryMuscle_exerciseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/primary_muscle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvCategory_exerciseFragment"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory_exerciseFragment" />

    <TextView
        android:id="@+id/tvSecondaryMuscle_exerciseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/secondary_muscle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrimaryMuscle_exerciseFragment"
        app:layout_constraintTop_toBottomOf="@+id/tvPrimaryMuscle_exerciseFragment" />

    <Button
        android:id="@+id/btnAddExercise_exerciseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText
        android:id="@+id/etExerciseName_exerciseFragment"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:hint="@string/exercise_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvExercise_exerciseFragment"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/tvExercise_exerciseFragment" />

    <Spinner
        android:id="@+id/spCategory_exerciseFragment"
        android:layout_width="140dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCategory_exerciseFragment"
        app:layout_constraintStart_toStartOf="@+id/etExerciseName_exerciseFragment"
        app:layout_constraintTop_toTopOf="@+id/tvCategory_exerciseFragment" />

    <Spinner
        android:id="@+id/spPrimaryMuscle_exerciseFragment"
        android:layout_width="190dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPrimaryMuscle_exerciseFragment"
        app:layout_constraintStart_toStartOf="@+id/spCategory_exerciseFragment"
        app:layout_constraintTop_toTopOf="@+id/tvPrimaryMuscle_exerciseFragment" />

    <Spinner
        android:id="@+id/spSecondaryMuscle_exerciseFragment"
        android:layout_width="190dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSecondaryMuscle_exerciseFragment"
        app:layout_constraintStart_toStartOf="@+id/spPrimaryMuscle_exerciseFragment"
        app:layout_constraintTop_toTopOf="@+id/tvSecondaryMuscle_exerciseFragment" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="194dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="384dp" />

    <Button
        android:id="@+id/btnAddCategory_exerciseFragment"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="+"
        app:layout_constraintBottom_toBottomOf="@+id/spCategory_exerciseFragment"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/spCategory_exerciseFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>